website new version

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <head>
 
-    <title>Jane Zill L.I.C.S.W.</title>
-    <meta name="Jane Zill Therapy">
+    <title>Jane Zill - LICSW</title>
+    <meta name="Jane C. Zill, LICSW" content="Jane Zill, LICSW is a psychotherapist whose practice interests include gender issues, family systems, medical illness, and psychological trauma.">
     <script type="text/javascript" src="js/javascript.js"></script>
     <link href="css/nav.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -39,15 +39,26 @@
     <!--contact-->
     <div id="contact">
         <p>
-            <br>My fee is $130.00 a session unless I have a contract with your health insurance company.  I accept the following insurances, among others: Blue Cross/Blue Shield, Harvard Pilgrim, Cigna, and Medicare. I am willing to discuss a sliding fee in certain circumstances.<br>
+            <br>I am licensed by the regulatory boards of NH, MA, ME, VT, and NC.  I accept several insurances, including Medicare, and will submit claims to your insurance company. I am willing to accept a reduced fee depending upon current circumstances.<br>
             <br>
-            <b>Please do not hesitate to contact me if you have questions: 603-436-4111</b>
+            <b>Please do not hesitate to contact me if you have questions or concerns: 603-498-1844</b>
             <br>
+            <br>Currently my practice is limited to telemental health.<br>
         </p>
 
-        <br>
-        <p class="connect">Connect on</p><a href="https://www.linkedin.com/in/jane-zill-a395b518/" target="_BLANK"><img id="linked-logo" src="images/LinkedIn-Logo.png"></a>
-        <br><br>
+         <br><br>
+         <p class="connect">Regulatory boards:</p>
+         <br><br>
+         <a href="https://www.oplc.nh.gov/mental-health/" target="_BLANK" class="boardLinks">New Hampshire Board of Mental Health Practice</a>
+         <br> <br>
+         <a href="https://www.mass.gov/orgs/board-of-registration-of-social-workers" target="_BLANK" class="boardLinks">Board of Registration of Social Workers MASS.gov</a>
+         <br> <br>
+         <a href="https://sos.vermont.gov/social-workers/" target="_BLANK" class="boardLinks">Vermont Secretary of State Office of Professional Regulation</a>
+         <br> <br>
+         <a href="https://www.maine.gov/pfr/professionallicensing/professions/state-board-social-worker-licensure" target="_BLANK" class="boardLinks">State of Maine Board of Social Workers</a>
+         <br> <br>
+         <a href="https://ncswboard.gov/" target="_BLANK">North Carolina Social Work Certification and Licensure Board</a>
+        <br><br> <br>
 
     <div>
 
